add LNN blog post

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
             {% if post.thumbnail %}
               <img src="{{ post.thumbnail }}" style="width:65%; height:65%" align="center"/>
             {% else %}
-              <img src="/_assets/graph.png" style="width:65px; height:65px" align="center"/> <!-- border: 0px solid #ccc; -->
+              <img src="/assets/graph.png" style="width:65px; height:65px" align="center"/> <!-- border: 0px solid #ccc; -->
             {% endif %}
         </div>
         <div style="display:inline-block;width:80%">
